@@ -8,6 +8,11 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+
+2017-08-04 niel
+	Chg: Bring in Darius' new TMDb library code. Switching to use php-tmdb/api library from github.
+	Fix: Check that '*filestoformreleases' index exists before checking its value for new group
+		creation.
 2017-08-03 DariusIII
 	Fix: Check for existing apikey before sending request to GiantBomb
 2017-08-03 niel
